--- a/index.html
+++ b/index.html
@@ -1,79 +1,230 @@
 <!DOCTYPE html>
 <html>
-
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Compiler : Lex/Yacc  IA32-code compiler example">
+    <meta name="viewport" content="width=640">
 
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+    <link rel="stylesheet" href="stylesheets/core.css" media="screen">
+    <link rel="stylesheet" href="stylesheets/mobile.css" media="handheld, only screen and (max-device-width:640px)">
+    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
 
-    <title>Compiler</title>
+    <script type="text/javascript" src="javascripts/modernizr.js"></script>
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+    <script type="text/javascript" src="javascripts/headsmart.min.js"></script>
+    <script type="text/javascript">
+      $(document).ready(function () {
+        $('#main_content').headsmart()
+      })
+    </script>
+    <title>Compiler by chenrui1988</title>
   </head>
 
   <body>
+    <a id="forkme_banner" href="https://github.com/chenrui1988/compiler">View on GitHub</a>
+    <div class="shell">
 
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/chenrui1988/compiler">View on GitHub</a>
+      <header>
+        <span class="ribbon-outer">
+          <span class="ribbon-inner">
+            <h1>Compiler</h1>
+            <h2>Lex/Yacc  IA32-code compiler example</h2>
+          </span>
+          <span class="left-tail"></span>
+          <span class="right-tail"></span>
+        </span>
+      </header>
 
-          <h1 id="project_title">Compiler</h1>
-          <h2 id="project_tagline">Lex/Yacc  IA32-code compiler example</h2>
-
-            <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/chenrui1988/compiler/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/chenrui1988/compiler/tarball/master">Download this project as a tar.gz file</a>
-            </section>
-        </header>
-    </div>
-
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
-        <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
-
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
-
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
-
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
-
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
-
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
-
-<h3>
-<a id="rather-drive-stick" class="anchor" href="#rather-drive-stick" aria-hidden="true"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out the documentation at <a href="https://help.github.com/pages">https://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
+      <section id="downloads">
+        <span class="inner">
+          <a href="https://github.com/chenrui1988/compiler/zipball/master" class="zip"><em>download</em> .ZIP</a><a href="https://github.com/chenrui1988/compiler/tarball/master" class="tgz"><em>download</em> .TGZ</a>
+        </span>
       </section>
-    </div>
 
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p class="copyright">Compiler maintained by <a href="https://github.com/chenrui1988">chenrui1988</a></p>
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+
+      <span class="banner-fix"></span>
+
+
+      <section id="main_content">
+        <h1>
+<a id="lexyacc-compiler" class="anchor" href="#lexyacc-compiler" aria-hidden="true"><span class="octicon octicon-link"></span></a>Lex/Yacc Compiler</h1>
+
+<blockquote>
+<p>This is a simple example to show how to use Lex/Yacc  to generate IA32 code</p>
+</blockquote>
+
+<h2>
+<a id="overview" class="anchor" href="#overview" aria-hidden="true"><span class="octicon octicon-link"></span></a>Overview</h2>
+
+<ul>
+<li><a href="#user-content-operating-environment">Operating Environment</a></li>
+<li><a href="#user-content-program-grammar">Program Grammar</a></li>
+<li><a href="#user-content-using-help">Using Help</a></li>
+<li><a href="#user-content-code-files">Code Files</a></li>
+<li><a href="#user-content-compilation-sequence">Compilation Sequence</a></li>
+</ul>
+
+<h4>
+<a id="operating-environment" class="anchor" href="#operating-environment" aria-hidden="true"><span class="octicon octicon-link"></span></a>Operating Environment</h4>
+
+<ul>
+<li>OS X 10.9.2</li>
+<li>Lex, Bison, Gcc</li>
+</ul>
+
+<h4>
+<a id="program-grammar" class="anchor" href="#program-grammar" aria-hidden="true"><span class="octicon octicon-link"></span></a>Program Grammar</h4>
+
+<h5>
+<a id="variable-type" class="anchor" href="#variable-type" aria-hidden="true"><span class="octicon octicon-link"></span></a>Variable Type</h5>
+
+<div class="highlight highlight-java"><pre>    s <span class="pl-k">:</span> <span class="pl-stj">String</span> <span class="pl-k">&lt;</span><span class="pl-k">-</span> <span class="pl-s1"><span class="pl-pds">"</span>abcd<span class="pl-pds">"</span></span>;
+    x <span class="pl-k">:</span> <span class="pl-stj">Int</span>;
+    x <span class="pl-k">:</span> <span class="pl-stj">Int</span> []; </pre></div>
+
+<h5>
+<a id="variable-declaration" class="anchor" href="#variable-declaration" aria-hidden="true"><span class="octicon octicon-link"></span></a>Variable Declaration</h5>
+
+<div class="highlight highlight-java"><pre>    y <span class="pl-k">:</span> <span class="pl-stj">Int</span> ;
+    x <span class="pl-k">:</span> <span class="pl-stj">Int</span> <span class="pl-k">-</span><span class="pl-k">&gt;</span> <span class="pl-c1">1</span>;</pre></div>
+
+<h5>
+<a id="assignment-statement" class="anchor" href="#assignment-statement" aria-hidden="true"><span class="octicon octicon-link"></span></a>Assignment Statement</h5>
+
+<div class="highlight highlight-java"><pre>    x <span class="pl-k">-</span><span class="pl-k">&gt;</span> <span class="pl-c1">1</span>;</pre></div>
+
+<h5>
+<a id="if-statement" class="anchor" href="#if-statement" aria-hidden="true"><span class="octicon octicon-link"></span></a>If Statement</h5>
+
+<div class="highlight highlight-java"><pre>    <span class="pl-k">if</span> 
+        a <span class="pl-k">&lt;</span> <span class="pl-c1">2</span> 
+    then 
+        <span class="pl-c1">1</span> 
+    <span class="pl-k">else</span> 
+        factorial(a<span class="pl-k">-</span><span class="pl-c1">1</span>) <span class="pl-k">+</span> factorial(a<span class="pl-k">-</span><span class="pl-c1">2</span>)
+    fi</pre></div>
+
+<h5>
+<a id="while-statement" class="anchor" href="#while-statement" aria-hidden="true"><span class="octicon octicon-link"></span></a>While Statement</h5>
+
+<div class="highlight highlight-java"><pre>    <span class="pl-k">while</span> i <span class="pl-k">&lt;</span> size loop {
+
+    } pool</pre></div>
+
+<h5>
+<a id="let-statement" class="anchor" href="#let-statement" aria-hidden="true"><span class="octicon octicon-link"></span></a>Let Statement</h5>
+
+<div class="highlight highlight-java"><pre>    let i <span class="pl-k">:</span> <span class="pl-stj">Int</span>, small <span class="pl-k">:</span> <span class="pl-stj">Int</span> in {
+
+    } tel</pre></div>
+
+<h5>
+<a id="system-declaration" class="anchor" href="#system-declaration" aria-hidden="true"><span class="octicon octicon-link"></span></a>System Declaration</h5>
+
+<div class="highlight highlight-java"><pre>    out_string(<span class="pl-s1"><span class="pl-pds">"</span>&gt; <span class="pl-pds">"</span></span>);
+    x <span class="pl-k">&lt;</span><span class="pl-k">-</span> in_int();
+    out_int(x<span class="pl-k">*</span><span class="pl-c1">2</span><span class="pl-k">+</span>(y<span class="pl-k">-</span><span class="pl-c1">4</span>));</pre></div>
+
+<h5>
+<a id="function-declaration" class="anchor" href="#function-declaration" aria-hidden="true"><span class="octicon octicon-link"></span></a>Function Declaration</h5>
+
+<div class="highlight highlight-java"><pre>    factorial(a<span class="pl-k">:</span> <span class="pl-stj">Int</span>) <span class="pl-k">:</span> <span class="pl-stj">Int</span> {
+
+    }</pre></div>
+
+<h5>
+<a id="class-declaration" class="anchor" href="#class-declaration" aria-hidden="true"><span class="octicon octicon-link"></span></a>Class Declaration</h5>
+
+<div class="highlight highlight-java"><pre>    <span class="pl-s">class</span> <span class="pl-en">Main</span> {
+
+    }</pre></div>
+
+<h5>
+<a id="a-program-sample" class="anchor" href="#a-program-sample" aria-hidden="true"><span class="octicon octicon-link"></span></a>A Program sample</h5>
+
+<div class="highlight highlight-java"><pre>    <span class="pl-s">class</span> <span class="pl-en">Main</span> {
+        s <span class="pl-k">:</span> <span class="pl-stj">String</span> <span class="pl-k">&lt;</span><span class="pl-k">-</span> <span class="pl-s1"><span class="pl-pds">"</span>abcd<span class="pl-pds">"</span></span>;
+        x <span class="pl-k">:</span> <span class="pl-stj">Int</span>;
+        y <span class="pl-k">:</span> <span class="pl-stj">Int</span> <span class="pl-k">&lt;</span><span class="pl-k">-</span> <span class="pl-c1">10</span>;
+        <span class="pl-en">main</span> () : Int {
+          x <span class="pl-k">&lt;</span><span class="pl-k">-</span> in_int();
+          out_string(<span class="pl-s1"><span class="pl-pds">"</span>test<span class="pl-pds">"</span></span>);
+          out_string(s);
+          out_int(x<span class="pl-k">*</span><span class="pl-c1">2</span><span class="pl-k">+</span>(y<span class="pl-k">-</span><span class="pl-c1">4</span>))
+        };
+    }</pre></div>
+
+<p>It's also has a main class in a file and a main function in a class, When compiler success, the program will run start by main function. The compiler can check the symbol scope, support function call, but now it can't support type check and It's not an object-oriented design</p>
+
+<h4>
+<a id="using-help" class="anchor" href="#using-help" aria-hidden="true"><span class="octicon octicon-link"></span></a>Using Help</h4>
+
+<ol>
+<li>build Lex/Yacc, Will Generate uncool.pgm program</li>
+</ol>
+
+<div class="highlight highlight-bash"><pre>    make</pre></div>
+
+<ol>
+<li>parse the uc  to IA32 code, execute the command</li>
+</ol>
+
+<div class="highlight highlight-bash"><pre>    ./uncool.pgm uncool.uc <span class="pl-k">&gt;</span>uncool.s </pre></div>
+
+<ol>
+<li>Assembly the IA32 code to executable program,execute the command</li>
+</ol>
+
+<div class="highlight highlight-bash"><pre>    gcc –m32 uncool.s –o uncool</pre></div>
+
+<ol>
+<li>execute the program you will see the result of this program result.</li>
+</ol>
+
+<div class="highlight highlight-bash"><pre>    ./uncool</pre></div>
+
+<h4>
+<a id="code-files" class="anchor" href="#code-files" aria-hidden="true"><span class="octicon octicon-link"></span></a>Code Files</h4>
+
+<ol>
+<li>Uncool.l，Uncool.y, Uclib.h<br>
+Lex/Yacc code common function and structure</li>
+<li>symbol_table.h symbol_table.c<br>
+symbol_table implement storage symbol in the LinkList</li>
+<li>stack.h stack.c<br>
+symbol_table stack implement store symbol_table in stack</li>
+<li>uccompiler.c<br>
+the main parse program, transition the Uc code to IA32 code</li>
+</ol>
+
+<h4>
+<a id="compilation-sequence" class="anchor" href="#compilation-sequence" aria-hidden="true"><span class="octicon octicon-link"></span></a>Compilation Sequence</h4>
+
+<p><img src="http://d.pcs.baidu.com/thumbnail/8dfdac6cd27588a6599662a338fee29a?fid=2150734521-250528-406344211216901&amp;time=1417179600&amp;sign=FDTAER-DCb740ccc5511e5e8fedcff06b081203-2UjbiSBH%2BVWvBM9vXqpVFDpfOLI%3D&amp;rt=sh&amp;expires=2h&amp;r=454594510&amp;sharesign=unknown&amp;size=c710_u500&amp;quality=100" alt="Alt text"></p>
+
+<ol>
+<li>Uclib.c / Uncool.y syntax analyzer program scan the uncool code to generate syntax tree. The tree data is store in the nodeType strut. The nodeType strut is a tree data strut, It contains all syntax nodes and those relationship.</li>
+<li>Then we will call ex function in the Uncool.y, when complete scan code, you can see the call function code in the Uncool.y , lineno 70, It will be executed when complete scan.</li>
+<li>The ex function is in the uccompiler.c file, It was used transition the Uc code to IA32 code, It read all node in the syntax tree and transition the operation to IA32 code.</li>
+<li>The symbol_table and stack is used to record the program variables
+Stack.h, Stack.c has define a linked list data structure， It was used to store symbol_table. When The code run into the class , function or let code, we will generate a symbol_table data and put it into Stack, The head of Stack is the current scope of the symbol table, when run out the class, function or let code, we wil let symbol table out the stack and remove the class, function or let’s variable. symbol_table is a linked list data structure too, It is used to store current scope’s symbol variable, when we use a variable , or a function, we will find from here</li>
+</ol>
+      </section>
+
+      <footer>
+        <span class="ribbon-outer">
+          <span class="ribbon-inner">
+            <p>this project by <a href="https://github.com/chenrui1988">chenrui1988</a> can be found on <a href="https://github.com/chenrui1988/compiler">GitHub</a></p>
+          </span>
+          <span class="left-tail"></span>
+          <span class="right-tail"></span>
+        </span>
+        <p>Generated with <a href="http://pages.github.com">GitHub Pages</a> using Merlot</p>
+        <span class="octocat"></span>
       </footer>
+
     </div>
 
     
-
   </body>
 </html>
